--- a/hora.html
+++ b/hora.html
@@ -18,7 +18,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy CursoemVideo</p>
+        <p>&copy; CursoemVideo</p>
     </footer>
     <script src = "script.js"> </script>
 </body>
