Modificações no html

--- a/hora.html
+++ b/hora.html
@@ -7,7 +7,7 @@
   <title>Hora do dia</title>
   <link rel="stylesheet" href = "estilo.css">
 </head>
-<body> onload = "carregar()">
+<body> O que é isso?
     <header>
     <section>
         <div id = "msg">
