Alteração no html

--- a/hora.html
+++ b/hora.html
@@ -7,14 +7,14 @@
   <title>Hora do dia</title>
   <link rel="stylesheet" href = "estilo.css">
 </head>
-<body> O que é isso?
+<body> onload = "carregar()">
     <header>
     <section>
         <div id = "msg">
             Aqui vai aparecer a mensagem...
         </div>
         <div id = "foto">
-            <img id = "imagem" src = "Imagemmanha.png" alt = "Foto do dia">
+            <img id = "imagem" src = "imagemtarde.png" alt = "Foto do dia">
         </div>
     </section>
     <footer>
