--- a/hora.html
+++ b/hora.html
@@ -9,6 +9,8 @@
 </head>
 <body onload="carregar()">
     <header>
+        <h1> Hora do Dia</h1>
+    </header>
     <section>
         <div id = "msg">
             Aqui vai aparecer a mensagem...
