--- a/Atividade idade/idade.html
+++ b/Atividade idade/idade.html
@@ -17,10 +17,13 @@
                 <input type = "number" name = "txtano" id = "txtano" min = "0">
             </p>
             <p>Sexo:
-                <input type="radio" name="rdasex" id="masc" checked>
-                <label for="masc">Masculino</label>
+                <input type="radio" name="radsex" id="masc" checked>
+                <label for="mas">Masculino</label>
                 <input type="radio" name="radsex" id="fem">
                 <label for="fem">Feminino</label>
+            </p>
+            <p>
+                <input type = "button" value="Verificar" onclick = "verificar()">
             </p>
         </div>
         <div id = "res">
