Alterando html e js

--- a/idade.html
+++ b/idade.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Hora do dia</title>
-  <link rel="stylesheet" href = "estilo01.css">
+  <link rel="stylesheet" href = "estilo.css">
 </head>
 <body>
     <header>
@@ -33,6 +33,6 @@
     <footer>
         <p>&copy; CursoemVideo</p>
     </footer>
-    <script src = "script01.js"> </script>
+    <script src = "script.js"> </script>
 </body>
 </html>
